--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,24 @@
 @import "tailwindcss";
+
+@layer components {
+  section[id^="about-me"], section[id^="experiences"], section[id^="testimonials"], section[id^="contact"] {
+    /* @apply relative h-screen w-full h-full flex flex-col items-start justify-start bg-gray-900 text-white overflow-hidden px-4 sm:px-6 md:px-8 lg:px-12; */
+    @apply h-screen w-full flex flex-col items-start justify-start bg-gray-950 text-white;
+  }
+
+  h1[id="section-title"] {
+    @apply absolute flex flex-col leading-[0.85] font-black tracking-tighter transition-colors text-4xl flex text-center justify-center items-center -rotate-10 opacity-40 uppercase w-full h-full;
+  }
+
+  button[class*="button-menu"] {
+    @apply cursor-pointer font-black text-4xl transition-all duration-300 block hover:bg-blue-700 uppercase;
+  }
+
+  button[id="button-esc"] {
+    @apply pl-5 sm:pl-10 md:pl-20 lg:pl-30 xl:pl-50 pr-4;
+  }
+
+  button[id="button-menu"] {
+    @apply pr-5 sm:pr-10 md:pr-20 lg:pr-30 xl:pr-50
+  }
+}
