--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   }
 
   h1[id="section-title"] {
-    @apply absolute flex flex-col leading-[0.85] font-black tracking-tighter transition-colors text-4xl flex text-center justify-center items-center -rotate-10 opacity-40 uppercase w-full h-full;
+    @apply absolute flex flex-col leading-[0.85] text-white/10 font-black tracking-tighter transition-colors text-4xl flex text-center justify-center items-center -rotate-10 uppercase w-full h-full;
   }
 
   button[class*="button-menu"] {
@@ -15,7 +15,7 @@
   }
 
   button[id="button-esc"] {
-    @apply pl-5 sm:pl-10 md:pl-20 lg:pl-30 xl:pl-50 pr-4;
+    @apply pl-5 sm:pl-7 md:pl-10 lg:pl-15 xl:pl-20 pr-4;
   }
 
   button[id="button-menu"] {
