--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,17 @@
 @import "tailwindcss";
 
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 0px;
+  background: #0E0D51;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #fff;
+  border-radius: 0px;
+  border: 2px solid #0E0D51;
+}
+
 @layer components {
   section[id^="about-me"], section[id^="experiences"], section[id^="testimonials"], section[id^="contact"] {
     /* @apply relative h-screen w-full h-full flex flex-col items-start justify-start bg-gray-900 text-white overflow-hidden px-4 sm:px-6 md:px-8 lg:px-12; */
