--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,10 @@
   div[class*="mask-internal"] {
     @apply [mask-image:linear-gradient(to_right,transparent,black_20%,black_80%,transparent)] px-20;
   }
+
+  div[class*="mask-internal-bottom"] {
+    @apply [mask-image:linear-gradient(to_bottom,transparent,black_10%,black_60%,transparent)] px-20;
+  }
 }
 
 @theme {
